--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -75,6 +75,79 @@
       border-radius: 10px;
       max-width: 400px;
       z-index: 1001;
+      border-radius: var(--radius-rounded-xl, 16px);
+      background: #FFF;
+      box-shadow: 0px 24px 48px -16px rgba(0, 0, 0, 0.20);
+      padding: 64px 96px;
+    }
+
+    &__title{
+        color: var(--text-slate-900, #0F172A);
+        text-align: center;
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 32px; /* 133.333% */
+      }
+
+      &__notify{
+        color: var(--text-slate-600, #475569);
+        text-align: center;
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px; /* 150% */
+        margin-top: 3px;
+        margin-bottom: 2rem;
+      }
+
+      &__button--enabled{
+        border-radius: var(--radius-rounded-md, 8px);
+        background: var(--bg-blue-600, #2563EB);
+        color: var(--text-slate-white, #FFF);
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 24px; /* 150% */
+        width: 100%;
+        height: 56px;
+        margin-top: 24px;
+      }
+
+      &__button--disabled{
+        border-radius: var(--radius-rounded-md, 8px);
+        background: var(--bg-slate-100, #F1F5F9);
+        height: 56px;
+        width: 100%;
+        margin-top: 24px;
+        color: var(--text-slate-500, #64748B);
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px; /* 150% */
+      }
+
+     &__select-group{
+        display: flex;
+        gap: 5px;
+
+      .modal__select{
+        border-radius: var(--radius-rounded-md, 8px);
+        border: 1px solid var(--border-slate-300, #CBD5E1);
+        background: var(--bg-slate-white, #FFF);
+        padding: 16px 20px;
+        color: var(--text-slate-600, #475569);
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px; /* 150% */
+        width: 100%;
+      }
     }
   }
   
