--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -3,6 +3,8 @@
    License: none (public domain)
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -57,8 +59,3 @@ button{
 .delete{
 	cursor: pointer;
 }
-
-button:hover {
-    background: #2E44A1;
-    color: #FFFFFF;
-  }
