--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -33,6 +33,11 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+
+body, #root{
+	height: 100vh;
+
+}
 ol, ul {
 	list-style: none;
 }
