--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -233,14 +233,14 @@ line-height: 24px; /* 150% */
         font-style: normal;
         font-weight: 500;
         line-height: 20px; /* 142.857% */
-        padding: 18px 48px;
-        gap: 48px;
     }
 
     &__item{
         width: fit-content;
         cursor: pointer;
-        height: 56px;
+        padding: 18px 24px;
+        transition: all ease-in-out .2s;
+        border-bottom: 1.5px solid transparent;
 
         &:hover{
             border-bottom: 1.5px solid var(--border-blue-600, #2563EB);
@@ -358,7 +358,7 @@ margin-top: auto;
     border: 1px solid var(--border-slate-200, #E2E8F0);
     background: var(--bg-slate-white, #FFF);
     display: flex;
-    width: 204px;
+    width: 200px;
     padding: 16px;
     flex-direction: column;
 
@@ -507,8 +507,11 @@ margin-top: auto;
         height: 100%;
         background-color: #fff;
         border-radius: var(--radius-rounded-none, 0px);
-background: var(--bg-slate-100, #F1F5F9);
-box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.20);
+        background: var(--bg-slate-100, #F1F5F9);
+        box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.20);
+        display: flex;
+        flex-direction: column;
+
       }
 
       &__header{
@@ -611,7 +614,70 @@ margin-bottom: 1rem;
             width: 80px;
         }
       }
+
+      &__summary{
+        display: inline-flex;
+        padding: var(--spacing-6, 24px);
+        flex-direction: column;
+        gap: var(--spacing-5, 16px);
+        border-radius: var(--radius-rounded-none, 0px);
+        background: var(--bg-slate-white, #FFF);
+        box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.10);
+        justify-content: center;
+        margin-top: auto;
+      }
+
+      
+      &__subtotal{
+      &-container{
+            display: flex;
+            justify-content: space-between;
+        }
+
+        &-text{
+            color: var(--text-slate-500, #64748B);
+            font-family: Inter;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 24px; /* 150% */
+        }
+
+        &-value{
+            color: var(--text-slate-900, #0F172A);
+            text-align: right;
+            font-family: Inter;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 24px; /* 150% */
+        }
+      }
+
+      &__goto-cart-button{
+        border-radius: var(--radius-rounded-md, 8px);
+        background: var(--bg-blue-600, #2563EB);
+        display: flex;
+        width: 312px;
+        padding: 16px 32px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        color: var(--text-slate-white, #FFF);
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 24px; /* 150% */
+
+        &:hover{
+            border-radius: var(--radius-rounded-md, 8px);
+            background: var(--bg-blue-800, #1E40AF);
+        }
+      }
   }
 
 
-  
+  .swiper-wrapper{
+    gap: 2.3125rem;
+  }
