--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -64,3 +64,31 @@ button{
 .delete{
 	cursor: pointer;
 }
+
+.select-wrapper {
+	position: relative;
+	width: 100%;
+  }
+  
+  .select-wrapper::after {
+	content: '';
+	background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L8 10L12 6' stroke='%230F172A' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+	background-size: 16px 16px;
+	width: 16px;
+	height: 16px;
+	position: absolute;
+	right: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	pointer-events: none;
+  }
+  
+  /* Estilos para o elemento select */
+  select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	padding-right: 30px; /* Espaço para a seta personalizada */
+	width: 100%;
+  }
+  
